Cosmetic changes to control intro notebook

--- a/notebooks/nb_20_IntroductionToControl.ipynb
+++ b/notebooks/nb_20_IntroductionToControl.ipynb
@@ -3252,7 +3252,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "A_fsfbk = mass_spring_damper.A - mass_spring_damper.B @ K\n",
@@ -3261,6 +3265,17 @@
     "D_fsfbk = mass_spring_damper.D\n",
     "closed_loop = ct.ss(A_fsfbk, B_fsfbk, C_fsfbk, D_fsfbk)\n",
     "print(closed_loop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Simulation"
    ]
   },
   {
@@ -3304,7 +3319,7 @@
     }
    },
    "source": [
-    "### Evaluation"
+    "#### Evaluation"
    ]
   },
   {
@@ -3447,7 +3462,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "A_fsfbk = inverted_pendulum.A - inverted_pendulum.B @ K\n",
@@ -3456,6 +3475,17 @@
     "D_fsfbk = inverted_pendulum.D\n",
     "closed_loop = ct.ss(A_fsfbk, B_fsfbk, C_fsfbk, D_fsfbk)\n",
     "print(closed_loop)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "#### Simulation"
    ]
   },
   {
