--- a/notebooks/nb_30_ControlAndPlanning.ipynb
+++ b/notebooks/nb_30_ControlAndPlanning.ipynb
@@ -259,12 +259,7 @@
     "# Input matrix\n",
     "B = np.array([[0, 1 / m]]).transpose()\n",
     "# Output matrices\n",
-    "C = np.array(\n",
-    "    [\n",
-    "        [1, 0],\n",
-    "        [0, 1]\n",
-    "    ]\n",
-    ")\n",
+    "C = np.array([[1, 0], [0, 1]])\n",
     "D = np.zeros(2)"
    ]
   },
@@ -449,12 +444,7 @@
     "# Input matrix\n",
     "B = np.array([[0, -1 / (M * l)]]).transpose()\n",
     "# Output matrices\n",
-    "C = np.array(\n",
-    "    [\n",
-    "        [1, 0],\n",
-    "        [0, 1]\n",
-    "    ]\n",
-    ")\n",
+    "C = np.array([[1, 0], [0, 1]])\n",
     "D = np.zeros(2)"
    ]
   },
@@ -1499,7 +1489,7 @@
     "    def __init__(self, lqr: do_mpc.controller.LQR) -> None:\n",
     "        self.lqr = lqr\n",
     "        self.lqr.reset_history()\n",
-    "    \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        return lqr.make_step(observation.reshape(-1, 1)).ravel()"
    ]
@@ -1543,7 +1533,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.close();\n",
+    "plt.close()\n",
     "fig, ax, graphics = do_mpc.graphics.default_plot(lqr.data)\n",
     "ax[0].hlines(xss[0], lqr.data._time[0], lqr.data._time[-1], \"r\");"
    ]
@@ -1696,7 +1686,7 @@
     "    def __init__(self, lqr: do_mpc.controller.LQR) -> None:\n",
     "        self.lqr = lqr\n",
     "        self.lqr.reset_history()\n",
-    "    \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        return lqr.make_step(observation[[1, 3]].reshape(-1, 1)).ravel()"
    ]
@@ -1740,7 +1730,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.close();\n",
+    "plt.close()\n",
     "fig, ax, graphics = do_mpc.graphics.default_plot(lqr.data, aux_list=[])\n",
     "ax[0].hlines(xss[0], lqr.data._time[0], lqr.data._time[-1], \"r\");"
    ]
@@ -2239,7 +2229,7 @@
     "        self.mpc.reset_history()\n",
     "        self.mpc.x0 = np.zeros(2)\n",
     "        self.mpc.set_initial_guess()\n",
-    "    \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        return mpc.make_step(observation.reshape(-1, 1)).ravel()"
    ]
@@ -2460,7 +2450,7 @@
     "        self.mpc.reset_history()\n",
     "        self.mpc.x0 = np.zeros(2)\n",
     "        self.mpc.set_initial_guess()\n",
-    "    \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        return mpc.make_step(observation[[1, 3]].reshape(-1, 1)).ravel()"
    ]
@@ -2568,7 +2558,9 @@
     "env = create_inverted_pendulum_environment()\n",
     "\n",
     "# distance_cost = casadi.bilin(np.diag([0.1, 1000, 0, 0]), inverted_pendulum.x.cat)\n",
-    "distance_cost = casadi.norm_2(inverted_pendulum.x[\"theta\"]) + 0.1 * casadi.sumsqr(inverted_pendulum.x[\"position\"])\n",
+    "distance_cost = casadi.norm_2(inverted_pendulum.x[\"theta\"]) + 0.1 * casadi.sumsqr(\n",
+    "    inverted_pendulum.x[\"position\"]\n",
+    ")\n",
     "terminal_cost = distance_cost\n",
     "stage_cost = distance_cost\n",
     "input_penalty = 0\n",
@@ -2692,7 +2684,7 @@
     "        self.mpc.reset_history()\n",
     "        self.mpc.x0 = np.zeros(4)\n",
     "        self.mpc.set_initial_guess()\n",
-    "    \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        return mpc.make_step(observation.reshape(-1, 1)).ravel()"
    ]
@@ -2887,7 +2879,7 @@
     "        self.mpc.reset_history()\n",
     "        self.mpc.x0 = np.array([0.0, -np.pi, 0.0, 0.0])\n",
     "        self.mpc.set_initial_guess()\n",
-    "    \n",
+    "\n",
     "    def act(self, observation: NDArray) -> NDArray:\n",
     "        return mpc.make_step(observation[[1, 3]].reshape(-1, 1)).ravel()"
    ]
@@ -2904,7 +2896,9 @@
    "source": [
     "%%capture\n",
     "max_steps = 500\n",
-    "env = create_inverted_pendulum_environment(max_steps=max_steps, cutoff_angle=np.inf, initial_angle=-np.pi)\n",
+    "env = create_inverted_pendulum_environment(\n",
+    "    max_steps=max_steps, cutoff_angle=np.inf, initial_angle=-np.pi\n",
+    ")\n",
     "controller = MPCController(mpc)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)"
    ]
