--- a/notebooks/nb_20_IntroductionToControl.ipynb
+++ b/notebooks/nb_20_IntroductionToControl.ipynb
@@ -517,7 +517,7 @@
    },
    "outputs": [],
    "source": [
-    "env = create_inverted_pendulum_environment()\n",
+    "env = create_inverted_pendulum_environment(max_steps=100, cutoff_angle=np.inf)\n",
     "env.reset()\n",
     "all_frames = []\n",
     "for i in range(2):\n",
@@ -1021,9 +1021,49 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "The transfer function was the primary tool used in classical control engineering. However, it has proven to be unwieldy for the analysis of multiple-input multiple-output (MIMO) systems, and has been largely supplanted by state space representations for such systems. In spite of this, a transfer matrix can always be obtained for any linear system, in order to analyze its dynamics and other properties: each element of a transfer matrix is a transfer function relating a particular input variable to an output variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**Poles** (respectively **Zeros**) of a transfer function are the frequencies for which the value of the denominator (respectively numerator) becomes infinite (respectively zero). The values of the poles and the zeros of a system determine whether the system is stable, and how well the system performs. Control systems, in the most simple sense, can be designed simply by assigning specific values to the poles and zeros of the system.\n",
+    "\n",
+    "Physically realizable control systems must have a number of poles greater than the number of zeros. Systems that satisfy this relationship are called Proper."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Closed-loop Transfer Function\n",
+    "\n",
+    "<figure>\n",
+    "    <img src=\"_static/images/20_close_loop_block_diagram.svg\" width=\"70%\"/>\n",
+    "</figure>\n",
+    "\n",
+    "The transfer function of this system is given by:\n",
+    "\n",
+    "$$\n",
+    "{\\dfrac {Y(s)}{X(s)}}={\\dfrac {G(s)}{1+G(s)H(s)}}\n",
+    "$$\n",
+    "\n",
+    "$\\displaystyle G(s)$ is called feedforward transfer function, $\\displaystyle H(s)$ is called feedback transfer function, and their product $G(s)H(s)$ is called the open-loop transfer function. "
    ]
   },
   {
@@ -1571,7 +1611,7 @@
     "# System Identification\n",
     "\n",
     "System Identification is the process of constructing a mathematical model of a\n",
-    "(dynamical) system from observations (measurements) of its inputs and outputs"
+    "(dynamical) system from observations (measurements) of its inputs and outputs."
    ]
   },
   {
@@ -2097,6 +2137,72 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "source": [
+    "We can now compare our model with observations from the actual environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "max_steps = 10\n",
+    "env = create_inverted_pendulum_environment(max_steps=max_steps)\n",
+    "controller = ConstantController()\n",
+    "results = simulate_environment(env, max_steps=max_steps, controller=controller)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "dt = env.dt\n",
+    "T = np.arange(len(results.observations)) * env.dt\n",
+    "T = T[:-1]\n",
+    "U = results.actions.transpose()\n",
+    "X0 = results.observations[0, [1, 3]]\n",
+    "response = ct.input_output_response(inverted_pendulum, T, U, X0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "plt.plot(response.time, response.outputs, label=\"System\")\n",
+    "plt.plot(response.time, results.observations[:-1, 1], label=\"Model\")\n",
+    "plt.xlabel(\"Time\")\n",
+    "plt.ylabel(\"Position\")\n",
+    "plt.legend();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -2155,7 +2261,7 @@
    "source": [
     "A Linearly Time-Invariant (LTI) system is stable if and only if:\n",
     "\n",
-    "- All the poles are in the left half of the complex plane.\n",
+    "- All the poles are in the left half of the complex plane (i.e. they have a negative real part).\n",
     "- All the eigenvalues of $A$ have negative real parts.\n",
     "- We can find two $p \\times p$ matrices $M$ and $N$ such that satisfy the Lyapunov Equation:\n",
     "\n",
@@ -2164,6 +2270,19 @@
     "  $$\n",
     "  \n",
     "  and $N$ is an arbitrary positive definite matrix, and $M$ is a unique positive definite matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<figure>\n",
+    "    <img src=\"_static/images/20_poles_stability.png\" width=\"80%\"/>\n",
+    "</figure>"
    ]
   },
   {
@@ -2339,7 +2458,8 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "hidden"
+    "solution2": "hidden",
+    "solution2_first": true
    },
    "source": [
     "### Inverted Pendulum"
@@ -2621,9 +2741,27 @@
    "source": [
     "### Kalman Filter\n",
     "\n",
+    "Kalman filtering, also known as linear quadratic estimation (LQE), is an algorithm that uses a series of measurements observed over time, including statistical noise and other inaccuracies, and produces estimates of unknown variables that tend to be more accurate than those based on a single measurement alone, by estimating a joint probability distribution over the variables for each timeframe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The Kalman filter model assumes the true state at time $t$ is described by a linear state-space model: \n",
+    "\n",
     "$$\n",
     "\\mathbf{x}_{t+1} = A_t\\mathbf{x}_t + B_t\\mathbf{u}_t + \\mathbf{w}_t\\\\\n",
-    "\\mathbf{y}_{t+1} = C_t\\mathbf{x}_t + \\mathbf{v}_t\n",
+    "$$\n",
+    "\n",
+    "at time $t$ an observation (or measurement) $\\mathbf{z}_t$ of the true state $\\mathbf{x}_t$ is made according to\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{z}_t = H_t \\mathbf{x}_t + \\mathbf{v}_t \n",
     "$$\n",
     "\n",
     "Where:\n",
@@ -2631,7 +2769,44 @@
     "- $\\mathbf{w}_t$ is the process noise, which is assumed to be drawn from a zero-mean multivariate normal distribution,\n",
     "  $\\mathcal{N}$, with covariance, $\\mathbf{w}_{t} \\sim {\\mathcal {N}}\\left(0,\\mathbf {Q} _{t}\\right)$.\n",
     "- $\\mathbf{v}_t$ is the observation noise, which is assumed to be zero-mean Gaussian white noise with covariance \n",
-    "  $\\mathbf{v} _{t}\\sim {\\mathcal {N}}\\left(0,\\mathbf {R} _{t}\\right)$."
+    "  $\\mathbf{v} _{t}\\sim {\\mathcal {N}}\\left(0,\\mathbf {R} _{t}\\right)$.\n",
+    "- $H_t$ is the observation model, which maps the true state space into the observed space and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Predict\n",
+    "\n",
+    "- Predicted (a priori) state estimate: $\\displaystyle {\\hat{\\mathbf{x}}}_{t\\mid t-1} = \\mathbf{A}_{t}\\mathbf{x}_{t-1\\mid t-1}+\\mathbf{B}_{t}\\mathbf{u}_{t-1}$\n",
+    "- Predicted (a priori) estimate covariance: $\\displaystyle {\\hat{\\mathbf{P}}}_{t\\mid t-1} = \\mathbf{A}_{t} \\mathbf{P}_{t-1\\mid t-1}\\mathbf{A}_{t}^{\\textsf{T}} + \\mathbf{Q}_{t}$\n",
+    "\n",
+    "#### Update\n",
+    "\n",
+    "- Innovation or measurement pre-fit residual: $\\displaystyle {\\tilde {\\mathbf {y}}}_{t} = \\mathbf {z}_{t}-\\mathbf{H}_{t}{\\hat {\\mathbf{x}}}_{t\\mid t-1}$\n",
+    "- Innovation (or pre-fit residual) covariance: $\\displaystyle \\mathbf {S} _{t+1}=\\mathbf {H} _{t+1}{\\hat {\\mathbf {P} }}_{t+1\\mid t}\\mathbf {H}_{t+1}^{\\textsf {T}} + \\mathbf {R}_{t+1}$\n",
+    "- Optimal Kalman gain: $\\displaystyle \\mathbf {K}_{t}={\\hat{\\mathbf{P}}}_{t\\mid t-1}\\mathbf{H}_{t}^{\\textsf{T}}\\mathbf{S}_{t}^{-1}$\n",
+    "- Updated (a posteriori) state estimate: $\\displaystyle \\mathbf{x}_{t\\mid t} = {\\hat{\\mathbf{x}}}_{t\\mid t-1} + \\mathbf{K}_{t}{\\tilde {\\mathbf{y}}}_{t}$\n",
+    "- Updated (a posteriori) estimate covariance: $\\displaystyle \\mathbf{P}_{t|t} = \\left(\\mathbf{I} - \\mathbf{K}_{t}\\mathbf{H}_{t}\\right){\\hat{\\mathbf{P}}}_{t|t-1}$\n",
+    "- Measurement post-fit residual: $\\displaystyle {\\tilde{\\mathbf{y}}}_{t\\mid t} = \\mathbf{z}_{t} - \\mathbf{H}_{t}\\mathbf{x}_{t\\mid t}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<figure>\n",
+    "    <img src=\"_static/images/20_kalman_filter.svg\" width=\"80%\"/>\n",
+    "</figure>"
    ]
   },
   {
@@ -2739,7 +2914,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "plot_estimator_response(\n",
@@ -2766,7 +2945,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown",
+    "solution2": "hidden",
     "solution2_first": true
    },
    "source": [
@@ -2779,7 +2958,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "### Inverted Pendulum"
@@ -2791,7 +2970,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "We collect some data from the environment"
@@ -2801,11 +2980,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
-    "max_steps = 200\n",
+    "max_steps = 20\n",
     "env = create_inverted_pendulum_environment(max_steps=max_steps)\n",
     "controller = ProportionalController(K=20)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)\n",
@@ -2820,14 +2999,14 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
     "Q = np.diag([10])\n",
-    "R = np.diag([1e-3])\n",
+    "R = np.diag([1e-5])\n",
     "# Initial State Covariance\n",
-    "P0 = np.diag([0.0, 1000])\n",
+    "P0 = np.diag([0.0, 100])\n",
     "inverted_pendulum_estimator = ct.create_estimator_iosystem(inverted_pendulum, Q, R, P0=P0)\n",
     "inverted_pendulum_estimator.name = \"estimator\"\n",
     "print(inverted_pendulum_estimator)"
@@ -2839,7 +3018,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "And run the estimator on the trajectory"
@@ -2852,7 +3031,7 @@
     "slideshow": {
      "slide_type": "fragment"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -2872,7 +3051,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -2887,7 +3066,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "We also run predictions in the future to see what happens next"
@@ -2900,7 +3079,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -2923,7 +3102,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3289,7 +3468,7 @@
    "outputs": [],
    "source": [
     "env = create_mass_spring_damper_environment()\n",
-    "n_steps = 500\n",
+    "n_steps = 100\n",
     "T = np.arange(0, n_steps) * env.dt\n",
     "x0 = np.zeros(closed_loop.nstates)\n",
     "# reference\n",
@@ -3352,7 +3531,7 @@
    },
    "outputs": [],
    "source": [
-    "max_steps = 500\n",
+    "max_steps = 100\n",
     "env = create_mass_spring_damper_environment(max_steps=max_steps)\n",
     "controller = FullStateFeedbackController(K=K, kr=kr, reference=0.1)\n",
     "results = simulate_environment(env, max_steps=max_steps, controller=controller)\n",
@@ -3406,7 +3585,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown",
+    "solution2": "hidden",
     "solution2_first": true
    },
    "source": [
@@ -3419,7 +3598,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "### Inverted Pendulum"
@@ -3432,11 +3611,11 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
-    "K = ct.place(inverted_pendulum.A, inverted_pendulum.B, np.array([-0.9, -0.5]))\n",
+    "K = ct.place(inverted_pendulum.A, inverted_pendulum.B, np.array([-30, -5]))\n",
     "K"
    ]
   },
@@ -3446,7 +3625,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
-    }
+    },
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3465,7 +3645,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
-    }
+    },
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3482,7 +3663,8 @@
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
-    }
+    },
+    "solution2": "hidden"
    },
    "source": [
     "#### Simulation"
@@ -3495,12 +3677,12 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
     "env = create_mass_spring_damper_environment()\n",
-    "n_steps = 500\n",
+    "n_steps = 100\n",
     "T = np.arange(0, n_steps) * env.dt\n",
     "x0 = np.zeros(closed_loop.nstates)\n",
     "# Change slightly the initial angle\n",
@@ -3517,7 +3699,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3531,7 +3713,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "source": [
     "### Evaluation"
@@ -3544,7 +3726,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3565,7 +3747,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3584,7 +3766,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3598,7 +3780,7 @@
     "slideshow": {
      "slide_type": "subslide"
     },
-    "solution2": "shown"
+    "solution2": "hidden"
    },
    "outputs": [],
    "source": [
@@ -3850,7 +4032,7 @@
     "        outlist=[\"y[0]\", \"u[0]\"],\n",
     "    )\n",
     "\n",
-    "    response = ct.input_output_response(closed_loop, T, u0, x0, params=params)\n",
+    "    response = ct.input_output_response(closed_loop, T, u0, x0)\n",
     "    plot_mass_spring_damper_results(\n",
     "        T, reference, response.states.transpose(), response.outputs[1, 1:]\n",
     "    )\n",
@@ -4096,7 +4278,7 @@
     "def tune_pid_mass_spring_damper(\n",
     "    Kp=widgets.FloatSlider(min=0.0, max=1000.0, step=1, value=10.0),\n",
     "    Ki=widgets.FloatSlider(min=0.0, max=100.0, step=1, value=0.0),\n",
-    "    Kd=widgets.FloatSlider(min=0.0, max=100.0, step=1, value=0.0),\n",
+    "    Kd=widgets.FloatSlider(min=0.0, max=1000.0, step=1, value=0.0),\n",
     "    tau=widgets.FloatSlider(min=0.001, max=1.0, step=0.1, value=0.1),\n",
     "    theta0=widgets.FloatSlider(min=-0.05, max=0.05, step=0.01, value=0.01),\n",
     "):\n",
@@ -4132,9 +4314,9 @@
    },
    "outputs": [],
    "source": [
-    "Kp = 1000\n",
+    "Kp = 600\n",
     "Ki = 0\n",
-    "Kd = 60"
+    "Kd = 50"
    ]
   },
   {
