Update and fix inverted pendulum equations

--- a/notebooks/nb_20_IntroductionToControl.ipynb
+++ b/notebooks/nb_20_IntroductionToControl.ipynb
@@ -1392,6 +1392,8 @@
     "- $M$: mass of the cart.\n",
     "- $m$: mass of the pendulum (assumed to be concentrated at the tip).\n",
     "- $l$: length of the pendulum.\n",
+    "- $\\mu_c$: cart friction coefficient.\n",
+    "- $\\mu_p$: pendulum friction coefficient.\n",
     "- $f(t)$: force applied on the cart.\n",
     "</div>\n",
     "</div>"
@@ -1405,19 +1407,16 @@
     }
    },
    "source": [
-    "Application of Newtonian physics to this system leads to the following model:\n",
+    "Application of Newtonian physics to this system leads to the [following model](https://sharpneat.sourceforge.io/research/cart-pole/cart-pole-equations.html):\n",
     "\n",
     "$$\n",
-    "\\ddot{y} = \\frac{1}{\\lambda_m + \\sin^2\\theta(t)} \\left[\n",
-    "\\frac{f(t)}{m} + \\dot{\\theta}(t)^2 l \\sin\\theta(t) - g \\cos\\theta(t) \\sin\\theta(t)\n",
-    "\\right]\n",
-    "\\\\\n",
-    "\\ddot{\\theta} = \\frac{1}{l\\lambda_m + \\sin^2\\theta(t)} \\left[\n",
-    "-\\frac{f(t)}{m}\\cos\\theta(t) + \\dot{\\theta}(t)^2 l \\sin\\theta(t) \\cos\\theta(t) + (1 - \\lambda_m) \\sin\\theta(t)\n",
+    "\\ddot{y}(t) = \\frac{1}{m\\sin^2\\theta(t) + M} \\left[\n",
+    "f(t) + ml \\dot\\theta^2(t) \\sin\\theta(t) - mg\\sin\\theta(t)\\cos\\theta(t)\n",
+    "\\right]\\\\\n",
+    "\\ddot\\theta(t) = \\frac{1}{Ml - ml\\cos^2\\theta} \\left[\n",
+    "g\\sin\\theta(t) - \\cos\\theta(t) f(t) + ml\\dot\\theta^2(t)\\cos\\theta(t)\\sin\\theta(t)\n",
     "\\right]\n",
     "$$\n",
-    "\n",
-    "where $\\lambda_m = \\frac{M}{m}$\n",
     "\n",
     "We're only interested in controlling the pendulum's angle, so we can ignore the first equation.\n",
     "\n",
@@ -1444,12 +1443,12 @@
    "source": [
     "$$\n",
     "\\dot{X}(t) = \\begin{bmatrix}\n",
-    "\\dot{x_1}(t) \\\\ \\dot{x_2}(t)\n",
+    "\\dot{x}_1(t) \\\\ \\dot{x}_2(t)\n",
     "\\end{bmatrix} =\n",
     "\\begin{bmatrix}\n",
     "x_2(t) \\\\\n",
-    "\\frac{1}{l\\lambda_m + \\sin^2 x_1(t)} \\left[\n",
-    "-\\frac{u(t)}{m}\\cos x_1(t) + x_2(t)^2 l \\sin x_1(t) \\cos x_1(t) + (1 - \\lambda_m) \\sin x_1(t)\n",
+    "\\frac{1}{Ml - ml \\cos^2 x_1(t)} \\left[\n",
+    "g \\sin x_1(t) - \\cos x_1(t) u(t) + m l x_2(t)^2 \\cos x_1(t) \\sin x_1(t)\n",
     "\\right] \\\\\n",
     "\\end{bmatrix}\n",
     "$$"
@@ -1519,12 +1518,12 @@
     "\n",
     "$$\n",
     "\\dot{X}(t) = \\begin{bmatrix}\n",
-    "\\dot{x_1}(t) \\\\ \\dot{x_2}(t)\n",
+    "\\dot{x}_1(t) \\\\ \\dot{x}_2(t)\n",
     "\\end{bmatrix} =\n",
     "\\begin{bmatrix}\n",
     "x_2(t) \\\\\n",
-    "\\frac{1}{l\\lambda_m} \\left[\n",
-    "-\\frac{u(t)}{m} + (1 - \\lambda_m) x_1(t)\n",
+    "\\frac{1}{M l} \\left[\n",
+    "-u(t) + (M + m) g x_1(t)\n",
     "\\right] \\\\\n",
     "\\end{bmatrix} =\n",
     "\\begin{bmatrix}\n",
@@ -2070,7 +2069,6 @@
     "    m=env.model.body_mass[2],\n",
     "    M=env.model.body_mass[1],\n",
     ")\n",
-    "lambda_m = ip_params.M / ip_params.m\n",
     "print(f\"{ip_params.l=}, {ip_params.m=}, {ip_params.M=}\")"
    ]
   },
@@ -2089,7 +2087,7 @@
     "A = np.array(\n",
     "    [\n",
     "        [0, 1],\n",
-    "        [(1 + lambda_m) * ip_params.g / (lambda_m * ip_params.l), 0],\n",
+    "        [(ip_params.M + ip_params.m) * ip_params.g / (ip_params.m * ip_params.l), 0],\n",
     "    ]\n",
     ")\n",
     "# Input matrix\n",
