--- a/notebooks/nb_30_ControlAndPlanning.ipynb
+++ b/notebooks/nb_30_ControlAndPlanning.ipynb
@@ -595,7 +595,8 @@
     }
    },
    "source": [
-    "## Inverted Pendulum\n",
+    "## Inverted Pendulum Model\n",
+    "\n",
     "\n",
     "<div>\n",
     "<figure style=\"float: left; width: 40%;\">\n",
@@ -604,13 +605,15 @@
     "        Inverted pendulum model <a href=\"#goodwin_control_2000\"><b id=\"goodwin_control_2000-back\">[Goodwin et al., 2000]</b></a>\n",
     "    </figcaption>\n",
     "</figure>\n",
-    "<div style=\"float: left; width: 50%\">\n",
+    "<div style=\"float: left; width: 50%;\">\n",
     "    \n",
     "- $y(t)$: distance along the horizontal axis from some reference point.\n",
     "- $\\theta(t)$: angle of the pendulum.\n",
     "- $M$: mass of the cart.\n",
     "- $m$: mass of the pendulum (assumed to be concentrated at the tip).\n",
     "- $l$: length of the pendulum.\n",
+    "- $\\mu_c$: cart friction coefficient.\n",
+    "- $\\mu_p$: pendulum friction coefficient.\n",
     "- $f(t)$: force applied on the cart.\n",
     "</div>\n",
     "</div>"
@@ -624,7 +627,38 @@
     }
    },
    "source": [
-    "The system has the following full non-linear state space model:\n",
+    "Application of Newtonian physics to this system leads to the [following model](https://sharpneat.sourceforge.io/research/cart-pole/cart-pole-equations.html):\n",
+    "\n",
+    "$$\n",
+    "(M+m)\\ddot{y}(t) = \n",
+    "f(t) - m l \\ddot{\\theta}(t) \\cos\\theta(t) - m l \\dot{\\theta}(t)^2 \\sin\\theta(t) - \\mu_c \\dot{y}(t)\n",
+    "\\\\\n",
+    "l\\ddot{\\theta}(t) =\n",
+    "g\\sin\\theta(t) - \\ddot{y}(t)^2 \\cos\\theta(t) - \\frac{\\mu_p}{m l}\\dot{\\theta}(t)\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We can convert this to state-space form with input $u(t) = f(t)$ and output\n",
+    "$y(t)$; by introducing:\n",
+    "\n",
+    "$$\n",
+    "X(t) = \\begin{bmatrix}\n",
+    "x_1(t) \\\\ x_2(t) \\\\ x_3(t) \\\\ x_4(t)\n",
+    "\\end{bmatrix}\n",
+    "= \\begin{bmatrix}\n",
+    "y(t) \\\\ \\theta(t) \\\\ \\dot{y}(t) \\\\ \\dot{\\theta}(t) \n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "The system has the following full state-space model:\n",
     "\n",
     "$$\n",
     "\\dot{X}(t) = \\begin{bmatrix}\n",
@@ -633,13 +667,28 @@
     "\\begin{bmatrix}\n",
     "x_2(t) \\\\\n",
     "x_4(t) \\\\\n",
-    "\\frac{1}{\\lambda_m + \\sin^2 x_2(t)} \\left[\n",
-    "\\frac{u(t)}{m} + x_4(t)^2 l \\sin x_2(t) - g \\cos x_2(t) \\sin x_2(t)\n",
-    "\\right] \\\\\n",
-    "\\frac{1}{l\\lambda_m + \\sin^2 x_2(t)} \\left[\n",
-    "-\\frac{u(t)}{m}\\cos x_2(t) + x_4(t)^2 l \\sin x_2(t) \\cos x_2(t) + (1 - \\lambda_m) \\sin x_2(t)\n",
-    "\\right] \\\\\n",
+    "\\dot{x}_2(t) \\\\\n",
+    "\\dot{x}_4(t) \\\\\n",
     "\\end{bmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "with algebraic equations:\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}\\\\\n",
+    "(M+m)\\dot{x}_3(t) - f(t) + m l \\dot{x}_4(t) \\cos x_2(t) + m l x_4(t)^2 \\sin x_2(t) + \\mu_c x_3(t) &= 0\n",
+    "\\\\\n",
+    "l\\dot{x}_4(t) - g\\sin x_2(t) + \\dot{x}_3(t)^2 \\cos x_2(t) + \\frac{\\mu_p}{m l}x_4(t) &= 0 \n",
+    "\\end{array}\n",
     "$$"
    ]
   },
