Add exercise about state-transition matrix to control intro notebook

--- a/notebooks/nb_20_IntroductionToControl.ipynb
+++ b/notebooks/nb_20_IntroductionToControl.ipynb
@@ -71,6 +71,7 @@
     "import mujoco\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
+    "import sympy as sym\n",
     "from gymnasium import Env\n",
     "from IPython.display import display, Markdown\n",
     "from ipywidgets import interact, widgets\n",
@@ -88,6 +89,7 @@
     "    plot_estimator_response,\n",
     "    plot_mass_spring_damper_results,\n",
     "    plot_inverted_pendulum_results,\n",
+    "    display_array\n",
     ")\n",
     "\n",
     "warnings.simplefilter(\"ignore\", UserWarning)\n",
@@ -130,6 +132,7 @@
    "source": [
     "There are few different branches of Control Theory:\n",
     "\n",
+    "- **Classical Control**: deals with the behavior of dynamical systems with inputs, and how their behavior is modified by feedback, using the Laplace transform as a basic tool to model such systems. \n",
     "- **Optimal Control**: deals with finding a control for a dynamical system over a period of time such that an objective function is optimized.\n",
     "- **Adaptive Control**: adapt to a controlled system with parameters which vary, or are initially uncertain.\n",
     "- **Robust Control**: an approach to controller design that explicitly deals with uncertainty."
@@ -173,6 +176,19 @@
     "  will invariably be a degree of approximation in achieving the specified goal.\n",
     "- **Measurements** These are crucial to let the controller know what the system\n",
     "  is actually doing and how the unavoidable disturbances are affecting it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In this part of the training, we will focus on classical control methods applied to linear time-invartiant (LTI) systems.\n",
+    "\n",
+    "We will use 2 different example systems (Mass-Spring-Damper and Inverted Pendulum) for which we will create mathematical models whose parameters we will estimate, afterward we will analyze their stability, controllability and observations and finally we will design observers and controllers for both of them."
    ]
   },
   {
@@ -866,7 +882,7 @@
     "\n",
     "- Time-Invariant (TI) or Time-Variant (TV).\n",
     "- Linear or Non-Linear.\n",
-    "- Continuous or Discrete.\n",
+    "- Continuous-time or Discrete-time.\n",
     "- Deterministic or Stochastic."
    ]
   },
@@ -910,7 +926,7 @@
     "This understanding is typically expressed in the form of a mathematical model which describes the\n",
     "steady state and dynamic behavior of the system.\n",
     "\n",
-    "This aspect of Control Engineering is closer to model-based Reinforcement Learning."
+    "In practice however, we can only derive a nominal model i.e. a mathematically simple and convenient system that is ideally close to the real system's model. The latter differs from our nominal model because it can have different values of the parameters (parametric uncertainties) or some unmodelled dynamics, e.g., the senor's inertia. These uncertainties are what explains the differences that exist between our designed controller's results in a simulation and in the actual environment. "
    ]
   },
   {
@@ -2421,6 +2437,206 @@
     }
    },
    "source": [
+    "## LTI State-Transition Matrix\n",
+    "\n",
+    "The solution to the following continous-time state-space model:\n",
+    "\n",
+    "$$\n",
+    "\\dot{\\mathbf{x}}(t)=  A \\mathbf{x}(t) + B \\mathbf {u} (t)\n",
+    "$$\n",
+    "\n",
+    "is given by:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{x}(t) = \\Phi(t)\\mathbf{x}(0) + \\int\\limits_{0}^{\\infty} \\Phi(t - \\tau) B \\mathbf{u}(\\tau) d\\tau\n",
+    "$$\n",
+    "\n",
+    "where: $\\Phi(t) = e^{At}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The unforced or homogeneous response ($\\mathbf{u}(t) = 0$) of this system is:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{x}(t) = e^{At}\\mathbf{x}(0)\n",
+    "$$\n",
+    "\n",
+    "which can be rewritten as:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{x}(t) = \\left[M e^{\\Lambda t}M^{-1}\\right] \\mathbf{x}(0)\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "- $e^{\\Lambda t} = \\begin{bmatrix}\n",
+    "  e^{\\lambda_1 t} & 0 & \\dots & 0 & 0\\\\\n",
+    "  0 & e^{\\lambda_2 t} & 0 & \\dots & 0 \\\\\n",
+    "  0 & 0 & \\dots & \\ddots & 0\\\\\n",
+    "  0 & 0 & \\dots  & 0 & e^{\\lambda_n t}\\\\\n",
+    "  \\end{bmatrix}$\n",
+    "- $\\Lambda$ is a vector that contains the eigenvalues of $A$.\n",
+    "- $M$ is a matrix whose columns are the eigenvectors of $A$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "## Exercise\n",
+    "\n",
+    "Determine state-transition matrix for an LTI system with the following dynamics matrix $A$:\n",
+    "\n",
+    "$$\n",
+    "A = \\begin{bmatrix}\n",
+    "-2 & 1\\\\\n",
+    "2 & -3\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "1. Determine the eigenvalues and eigenvectors of the dynamics matrix.\n",
+    "2. Determine the state-transition matrix.\n",
+    "3. What can we say about the system's stability given the initial conditions $x_1(t) = 0, x_2(t) = 2$\n",
+    "\n",
+    "> **Hint**: \n",
+    "> - use `np.linalg.eig(A)` to determine the eigenvalues and eigenvectors of a matrix $A$.\n",
+    "> - use `np.linalg.inv(M)` to compute the inverse of a matrix $M$,"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden",
+    "solution2_first": true
+   },
+   "source": [
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "A = np.array([[-2, 1], [2, -3]])\n",
+    "display_array(\"A\", A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "Lambda, M = np.linalg.eig(A)\n",
+    "display_array(\"\\Lambda\", Lambda)\n",
+    "display_array(\"M\", eigenvectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "M_1 = np.linalg.inv(M)\n",
+    "display_array(\"M^{-1}\", M_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "M * sym.simplify(sym.exp(sym.Matrix(np.diag(Lambda) * t))) * M_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "t = sym.symbols(\"t\")\n",
+    "phi = M * sym.simplify(sym.exp(sym.Matrix(np.diag(Lambda) * t))) * M_1\n",
+    "display_array(\"\\Phi(t)\", phi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "solution2": "hidden"
+   },
+   "outputs": [],
+   "source": [
+    "x0 = np.array([[0], [2]])\n",
+    "x = phi * x0\n",
+    "display_array(\"x(t)\", x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "solution2": "hidden"
+   },
+   "source": [
+    "The system's response is composed of two decaying exponentials which means that system is asymptotically stable with stable end-state $x(\\infty) = \\begin{bmatrix} 0 \\\\ 0\\end{bmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "## Exercise\n",
     "\n",
     "- Determine whether the mass-spring-damper system is stable.\n",
@@ -2819,7 +3035,7 @@
     }
    },
    "source": [
-    "## Parameter Estimation\n",
+    "## Parameter Estimation using an Observer\n",
     "\n",
     "Consider the augmented state vector $\\mathbf{z}(t)$:\n",
     "\n",
@@ -2845,7 +3061,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "If this system is observable then we can use an observer to estimate the system's parameters."
+    "If this system is observable then we can use an observer to estimate the system's parameters. Unfortunately, this system is no longer linear and thus requires a different approach."
    ]
   },
   {
