Build: fix CI, remove data pulling at startup

--- a/notebooks/nb_10_PresentationTemplate.ipynb
+++ b/notebooks/nb_10_PresentationTemplate.ipynb
@@ -40,7 +40,177 @@
      "remove-input-nbconv"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>/*\n",
+       "This file is mainly copy-pasta from rise's examples\n",
+       "https://github.com/damianavila/RISE/blob/master/examples/rise.css\n",
+       "that was further customized for appliedAI purposes\n",
+       "*/\n",
+       "@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400&display=swap');\n",
+       "\n",
+       "\n",
+       "/*\n",
+       "body {\n",
+       "    font-family: 'Work Sans', sans-serif !important;\n",
+       "    text-transform: initial !important;\n",
+       "    letter-spacing: initial !important;\n",
+       "    font-weight: 400 !important;\n",
+       "    line-height: 1.5 !important;\n",
+       "    text-size-adjust: 100% !important;\n",
+       "    ‑webkit‑text‑size‑adjust: 100% !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".reveal, div.text_cell_render, .md-slide, .sidebar-wrapper {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       ".navbar-default .navbar-nav > li > a {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       ".filename {\n",
+       "    font-size: 2.4rem !important;\n",
+       "    color: #212529 !important;\n",
+       "    font-weight: 600 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal, .md-slide {\n",
+       "    color: white !important;\n",
+       "}\n",
+       "\n",
+       "h1, h2 {\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "h3, h4, h5, h6 {\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       ".reveal p, .reveal ol, .reveal dl, .reveal ul,\n",
+       "div.text_cell_render {\n",
+       "    color: #212529 !important;\n",
+       "}\n",
+       "\n",
+       "/*copied from stackoverflow, better spacing between list items*/\n",
+       "li + li {\n",
+       "  margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "body.rise-enabled .reveal ol, body.rise-enabled .reveal dl, body.rise-enabled .reveal ul {\n",
+       "    margin-left: 0.1em;\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       ".reveal .rendered_html h1:first-child,\n",
+       ".reveal .rendered_html h2:first-child,\n",
+       ".reveal .rendered_html h3:first-child,\n",
+       ".reveal .rendered_html h4:first-child,\n",
+       ".reveal .rendered_html h5:first-child {\n",
+       "    margin-top: 0.2em;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       ".CodeMirror-lines, .output_text {\n",
+       "    font-size: 1.5rem !important;\n",
+       "}\n",
+       "*/\n",
+       "\n",
+       "h1.plan, h2.plan, h3.plan {\n",
+       "    text-align: center;\n",
+       "    padding-bottom: 30px;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>span.plan-bold {\n",
+       "    font-size: 110%;\n",
+       "    padding: 4px;\n",
+       "    font-weight: bold;\n",
+       "    background-color: #eee;\n",
+       "}\n",
+       "\n",
+       "ul.plan>li>ul.subplan>li>span.plan-bold {\n",
+       "    font-weight: bold;\n",
+       "}\n",
+       "\n",
+       ".plan-strike {\n",
+       "    opacity: 0.4;\n",
+       "/*    text-decoration: line-through; */\n",
+       "}\n",
+       "\n",
+       "div.plan-container {\n",
+       "    display: grid;\n",
+       "    grid-template-columns: 50% 50%;\n",
+       "}\n",
+       "\n",
+       "/*\n",
+       " * this is to void xarray's html output to show the fallback textual representation\n",
+       " * see also\n",
+       "   * xarray.md and\n",
+       "   * https://github.com/damianavila/RISE/issues/594\n",
+       " */\n",
+       ".reveal pre.xr-text-repr-fallback {\n",
+       "    display: none;\n",
+       "}\n",
+       "\n",
+       "#toc-header, .toc-item li {\n",
+       "    margin: auto !important;\n",
+       "    color: #808080 !important;\n",
+       "}\n",
+       "\n",
+       "#toc, #toc-wrapper, .toc-item-num, #toc a, .toc {\n",
+       "    margin: auto !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "#toc-wrapper {\n",
+       "    top: auto !important;\n",
+       "    bottom: auto !important;\n",
+       "    margin-top: 2rem !important;\n",
+       "    color: #00747b !important;\n",
+       "}\n",
+       "\n",
+       "\n",
+       "#rise-header {\n",
+       "    margin: 10px;\n",
+       "    left: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-footer {\n",
+       "    margin: 10px;\n",
+       "    right: 5%;\n",
+       "}\n",
+       "\n",
+       "#rise-backimage {\n",
+       "    opacity: 0.70;\n",
+       "}\n",
+       "\n",
+       ".reveal img {\n",
+       "    max-width: 100%;\n",
+       "}\n",
+       "\n",
+       "\n",
+       ".md-slide.title {\n",
+       "    position: relative;\n",
+       "    top: -50%;\n",
+       "    margin-left: 5%;\n",
+       "    font-size: 4em !important;\n",
+       "    line-height: 1.6;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%presentation_style"
    ]
@@ -65,8 +235,7 @@
    "source": [
     "%%capture\n",
     "\n",
-    "%set_random_seed 12\n",
-    "%download_data first_nb"
+    "%set_random_seed 12"
    ]
   },
   {
@@ -83,7 +252,30 @@
      "remove-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "\n",
+       "$\\newcommand{\\vect}[1]{{\\mathbf{\\boldsymbol{#1}} }}$\n",
+       "$\\newcommand{\\amax}{{\\text{argmax}}}$\n",
+       "$\\newcommand{\\P}{{\\mathbb{P}}}$\n",
+       "$\\newcommand{\\E}{{\\mathbb{E}}}$\n",
+       "$\\newcommand{\\R}{{\\mathbb{R}}}$\n",
+       "$\\newcommand{\\Z}{{\\mathbb{Z}}}$\n",
+       "$\\newcommand{\\N}{{\\mathbb{N}}}$\n",
+       "$\\newcommand{\\C}{{\\mathbb{C}}}$\n",
+       "$\\newcommand{\\abs}[1]{{ \\left| #1 \\right| }}$\n",
+       "$\\newcommand{\\simpl}[1]{{\\Delta^{#1} }}$\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%load_latex_macros"
    ]
@@ -100,7 +292,19 @@
      "hide-cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Protocol\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbase\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BaseEstimator\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinear_model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LinearRegression\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mean_squared_error, r2_score\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -367,6 +571,11 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "### Rendering and Cells\n",
     "\n",
@@ -394,13 +603,7 @@
     " jupyter-book rendering and input-hidden in the nbconvert rendering.\n",
     " We cannot use the same tags for nbconvert as for jupyter-book, since\n",
     " we sometimes need to treat cells differently depending on the renderer.`\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
@@ -854,7 +1057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   },
   "rise": {
    "footer": "<img src='_static/images/aai-logo.png' alt='logo' height='50em'>",
