Add mpc and lqr block diagrams

--- a/notebooks/nb_30_ControlAndPlanning.ipynb
+++ b/notebooks/nb_30_ControlAndPlanning.ipynb
@@ -177,6 +177,25 @@
     }
    },
    "source": [
+    "In this part of the training, we will move away from classical control methods and focus on optimal control methods applied to linear and non-linear systems.\n",
+    "\n",
+    "We will use the same 2 systems we have studied previously (Mass-Spring-Damper and Inverted Pendulum). We will additionally consider controlling the full non-linear inverted pendulum (pendulum angle and cart position).\n",
+    "\n",
+    "As we present the different methods, we will highlight commonalities and differences with Reinforcement Learning.\n",
+    "\n",
+    "For the final exercise we will attempt to control the highly non-linear inverted pendulum system with different objectives.\n",
+    "\n",
+    "Finally, we will present AlphaZero and highlight "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "# Planning"
    ]
   },
@@ -1612,6 +1631,22 @@
     }
    },
    "source": [
+    "<figure>\n",
+    "    <img src=\"_static/images/30_lqr_block_diagram.svg\" width=\"60%\"/>\n",
+    "    <figcaption>\n",
+    "        LQR Block Diagram.\n",
+    "    </figcaption>\n",
+    "</figure>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### Mass-Spring-Damper"
    ]
   },
@@ -2046,15 +2081,31 @@
    "source": [
     "<div>\n",
     "<figure style=\"float: left; width: 60%;\">\n",
-    "    <img src=\"_static/images/30_model_predictive_control.png\" width=\"100%\"/>\n",
+    "    <img src=\"_static/images/30_model_predictive_control_horizon.svg\" width=\"100%\"/>\n",
     "</figure>\n",
     "<div style=\"float: right; width: 39%;\">\n",
     "<br><br><br>Illustration of the problem solved by MPC at state $x_k$.\n",
     "We minimize the cost function over the next $l$ stages.\n",
-    "We then apply the first control of the optimizing\n",
-    "sequence.\n",
+    "We then apply the control of the optimizing sequence up to the control horizon.\n",
+    "In most cases, the control horizon is set to 1.\n",
     "</div>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<figure>\n",
+    "    <img src=\"_static/images/30_mpc_block_diagram.svg\" width=\"80%\"/>\n",
+    "    <figcaption>\n",
+    "        MPC Block Diagram.\n",
+    "    </figcaption>\n",
+    "</figure>"
    ]
   },
   {
